# Smart_City

./: command.txt  docker-compose.yml  pyproject.toml
jobs/: _.env  _bk_spark-city.py  config.py  main.py  spark-city.py
terraform/: provider.tf
terraform/Modules/AWS/S3/: s3.resource.tf
terraform/landingzones/region-ap-south-1/development/: rg.tfvars
